--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,8 +7,8 @@
 /* Header */
 
 .navbar {
-  height: 90px;
-  background-color: white !important;
+  /* height: 90px; */
+  background-color: #fefefe !important;
 }
 
 .nav-item.dropdown:hover .dropdown-menu {
@@ -51,16 +51,13 @@
 .title-color {
   color: #4872fa !important;
 }
+
 .box-content {
   top: 15%;
   width: auto !important;
   left: 60% !important;
 }
 
-.box-product,
-.box-blog {
-  width: 270px !important;
-}
 
 .deal-section {
   height: 250px;
@@ -83,22 +80,27 @@
   background: url("../img/Male.png") no-repeat 9px center;
   padding-left: 30px;
 }
+
 .categories .nu {
   background: url("../img/Female.png") no-repeat 9px center;
   padding-left: 30px;
 }
+
 .categories .unisex {
   background: url("../img/Unisex.png") no-repeat 9px center;
   padding-left: 30px;
 }
+
 .categories .chu-nhat {
   background: url("../img/chu-nhat.png") no-repeat 9px center;
   padding-left: 60px;
 }
+
 .categories .mat-meo {
   background: url("../img/mat-meo.png") no-repeat 9px center;
   padding-left: 60px;
 }
+
 .categories .oval {
   background: url("../img/oval.png") no-repeat 9px center;
   padding-left: 60px;
@@ -108,7 +110,9 @@
 .ui-widget-content .ui-state-default {
   border-radius: 25px;
   background: #4872fa !important;
+  top: auto !important;
 }
+
 div.ui-slider {
   height: 20px !important;
 }
@@ -190,6 +194,160 @@ div.ui-slider {
 .nav-tabs .nav-link:hover {
   border-top-left-radius: 0 !important;
   border-top-right-radius: 0 !important;
+}
+
+/* Floating button */
+.fab-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  user-select: none;
+  position: fixed;
+  bottom: 30px;
+  right: 30px;
+}
+
+.fab-container:hover {
+  height: 100%;
+}
+
+.fab-container:hover .sub-button:nth-child(2) {
+  transform: translateY(-80px);
+}
+
+.fab-container:hover .sub-button:nth-child(3) {
+  transform: translateY(-140px);
+}
+
+.fab-container:hover .sub-button:nth-child(4) {
+  transform: translateY(-200px);
+}
+
+.fab-container:hover .sub-button:nth-child(5) {
+  transform: translateY(-260px);
+}
+
+.fab-container:hover .sub-button:nth-child(6) {
+  transform: translateY(-320px);
+}
+
+.fab-container .fab {
+  position: relative;
+  height: 70px;
+  width: 70px;
+  background-color: #4ba2ff;
+  border-radius: 50%;
+  z-index: 2;
+}
+
+.fab-container .fab::before {
+  content: " ";
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  height: 35px;
+  width: 35px;
+  background-color: inherit;
+  border-radius: 0 0 10px 0;
+  z-index: -1;
+}
+
+.fab-container .fab .fab-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+}
+
+.fab-container .fab .fab-content .material-icons {
+  color: white;
+  font-size: 48px;
+}
+
+.fab-container .sub-button {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  bottom: 10px;
+  right: 10px;
+  height: 50px;
+  width: 50px;
+  background-color: #4ba2ff;
+  border-radius: 50%;
+  transition: all 0.3s ease;
+}
+
+.fab-container .sub-button:hover {
+  cursor: pointer;
+}
+
+.fab-container .sub-button .material-icons {
+  color: white;
+  padding-top: 6px;
+}
+
+/* Floating button */
+
+
+.navbar-toggler {
+  border: 0 !important;
+}
+
+.navbar-toggler:focus,
+.navbar-toggler:active,
+.navbar-toggler-icon:focus {
+  outline: none !important;
+  box-shadow: none !important;
+  border: 0 !important;
+}
+
+.toggler-icon {
+  width: 30px;
+  height: 3px;
+  background-color: #e74c3c;
+  display: block;
+  transition: all 0.2s;
+}
+
+.middle-bar {
+  margin: 5px auto;
+}
+
+
+.navbar-toggler .top-bar {
+  transform: rotate(45deg);
+  transform-origin: 10% 10%;
+}
+
+.navbar-toggler .middle-bar {
+  opacity: 0;
+  filter: alpha(opacity=0);
+}
+
+.navbar-toggler .bottom-bar {
+  transform: rotate(-45deg);
+  transform-origin: 10% 90%;
+}
+
+.navbar-toggler.collapsed .top-bar {
+  transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .middle-bar {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
+
+.navbar-toggler.collapsed .bottom-bar {
+  transform: rotate(0);
+}
+
+.navbar-toggler.collapsed .toggler-icon {
+  background-color: #777777;
 }
 
 /* Content */
