--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -45,6 +45,15 @@
   /* height: 870px; */
 }
 
+.slide_mainpage .carousel-item {
+  /* height: 100vh; */
+}
+
+.slide_mainpage .carousel-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
 /* Slide */
 
 /* Content */
@@ -57,7 +66,6 @@
   width: auto !important;
   left: 60% !important;
 }
-
 
 .deal-section {
   height: 250px;
@@ -292,7 +300,6 @@ div.ui-slider {
 
 /* Floating button */
 
-
 .navbar-toggler {
   border: 0 !important;
 }
@@ -316,7 +323,6 @@ div.ui-slider {
 .middle-bar {
   margin: 5px auto;
 }
-
 
 .navbar-toggler .top-bar {
   transform: rotate(45deg);
@@ -350,11 +356,30 @@ div.ui-slider {
   background-color: #777777;
 }
 
+table {
+  width: 100%;
+  /* border-collapse: collapse; */
+  margin-bottom: 20px;
+}
+
+th,
+td {
+  padding: 10px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+}
+
+th {
+  background-color: #f2f2f2;
+}
+
+.product-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
 /* Content */
-
-/* Footer */
-
-/* Footer */
 
 @media (max-width: 768px) {
   * {
